--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 spring.datasource.url=jdbc:mysql://localhost:3306/project01?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 #spring.datasource.password=admin
-spring.datasource.password=rootroot
+spring.datasource.password=root
 
 # HIBERNATE
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
