--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,11 +3,20 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 # DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/project01?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-#spring.datasource.password=admin
-spring.datasource.password=root
+spring.datasource.password=rootroot
+#spring.datasource.password=root
 
 # HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# Config upload file
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.file.upload-dir=./uploads
+
+# JWT
+jwt.secret=my-very-secret-key
+jwt.duration=86400 
