--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 server.port=6789
 
 # DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/project01?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/betaV01?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 #spring.datasource.password=admin
 spring.datasource.password=rootroot
