--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,10 @@
 spring.jackson.serialization.write-dates-as-timestamps=false
 server.port=6789
+# Hot reload template
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.resources.static-locations=file:src/main/resources/static/
 
 # DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/betaV01?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
